# rust-db-tui

./: Cargo.toml
src/: db.rs  main.rs  table.rs  utils.rs
src/db/: mod.rs  parser.rs  sql_client.rs
src/model/: database.rs  table.rs
src/ui/: input_query.rs  layout.rs  mod.rs  records.rs
src/ui/layouts/: change_db.rs  edit_sql.rs  layout_trait.rs  mod.rs  normal.rs
src/ui/widgets/: ctx.rs  database.rs  input_query.rs  mod.rs  popup.rs  records.rs  sql_input.rs  sql_output.rs  tab.rs  table.rs  table_column.rs  table_list.rs  table_record.rs  tables.rs
src/ui/widgets/table/: mod.rs  table.rs  table_column.rs  table_record.rs
