[package]
name = "sql-cli-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
sqlx = { version = "0.5.13", features = ["mysql", "runtime-actix-native-tls", "decimal", "json"], default-features = false }
dotenv = "0.15.0"
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.57"
